--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
                     </a>
                     <ul class="subnav">
                         <li><a href="#">Basic English</a></li>
-                        <li><a href="#">Smoke</a></li>
-                        <li><a href="#">Fight</a></li>
+                        <li><a href="#">Basic CS:GO</a></li>
+                        <li><a href="#">Basic LOL</a></li>
                     </ul>
                 </li>
             </ul>
@@ -48,27 +48,26 @@
             <!-- End: Search button -->
         </div>
 
-        <div id="slider">
-            <div style="margin: 0 auto; position: absolute; top: 50%;left: 50%;transform: translate(-50%, -50%);">
+            <div style="display: flex; justify-content: center; align-items: center; margin-top: 100px;">
                 <div class="courses-container">
                     <div class="course">
                         <div class="course-preview">
-                            <h6>Course</h6>
+                            <!-- <h6>Course</h6> -->
                             <h2>GUYS! IT'S ABOUT ENGLISH TIME!</h2>
                             <p>Starting time: expected opening date from September 7, 2023 (depending on the number of registrations)</p>
                             <hr style="margin-top: 20px; margin-bottom: 20px;">
                             <p>Reference schedule:
                                 Mon-Fri: 22:00-23:00</p>
-                            <a href="#">View all chapters <i class="fas fa-chevron-right"></i></a>
+                            <!-- <a href="#">View all chapters <i class="fas fa-chevron-right"></i></a> -->
                         </div>
                         <div class="course-info">
-                            <div class="progress-container">
+                            <!-- <div class="progress-container">
                                 <div class="progress"></div>
                                 <span class="progress-text">
                                     6/9 Challenges
                                 </span>
-                            </div>
-                            <h6>Chapter 1</h6>
+                            </div> -->
+                            <!-- <h6>Chapter 1</h6> -->
                             <h2>Basic English</h2>
                             <p>For all of you who want to learn English from the beginner level, have lost your roots, have no ability or are weak in listening, pronunciation, reading, vocabulary, grammar and are really eager to learn and want to build Build and improve basic English in a methodical way.</p>
                             <p></p>
@@ -77,7 +76,6 @@
                     </div>
                 </div>
             </div>
-        </div>
 
         <div id="container">
             <div class="content-section">
@@ -171,7 +169,7 @@
             <div class="modal-body">
                 <label for="ticket-quantity" class="modal-label">
                     <i class="ti-shopping-cart"></i>
-                    Tickets, $15 per person
+                    Courses, $200 per person
                 </label>
                 <input id="ticket-quantity" type="text" class="modal-input" placeholder="How many?">
 
